--- a/planify/src/index.css
+++ b/planify/src/index.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&family=Work+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap");
+
+body {
+  font-family: "Work Sans", sans-serif;
+}
+
 @layer base {
   body {
     @apply m-0 font-sans antialiased;
@@ -64,3 +70,7 @@
 	);
 }
 
+/* Styling for navbar */
+.pink-purple-gradient_text {
+  @apply bg-gradient-to-r from-[#f276ac] to-[#bc7ad8] bg-clip-text text-transparent;
+}
