--- a/planify/src/index.css
+++ b/planify/src/index.css
@@ -87,3 +87,43 @@ body {
 .pink-gradient-text {
   @apply bg-gradient-to-r from-[#9294ff] to-[#ca50ff] bg-clip-text text-transparent;
 }
+
+.subhead-text {
+  @apply font-semibold sm:text-3xl text-xl relative font-poppins;
+}
+
+.popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgba(0, 0, 0, 0.5);
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+}
+
+.content {
+  position: relative;
+  background: white;
+  padding: 20px;
+  border-radius: 8px;
+  z-index: 10;
+}
+
+.close-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
+}
