--- a/planify/src/App.css
+++ b/planify/src/App.css
@@ -36,3 +36,26 @@
     transform: rotate(360deg);
   }
 }
+
+/* .editor{
+  position: relative;
+  height: 100%;
+  width: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.preview{
+  position: relative;
+  height: 100%;
+  width: 50%;
+  padding: 10xp;
+  overflow: scroll;
+  border-left: 1px solid #000;
+} */
+
+.editor-input {
+  height: 100%;
+  width: 100%;
+}
